--- a/src/web-components/globals.css
+++ b/src/web-components/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+summary {
+    display: block;
+    list-style: none;
+}
+
+summary::-webkit-details-marker {
+    display:none;
+}
